[package]
name = "semiprimes"
version = "0.1.0"
authors = ["Howard Wu <howardwu@berkeley.edu>"]
edition = "2018"

[dependencies]
rand = "0.5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[profile.bench]
opt-level = 3
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
debug-assertions = true
